tests/invalid/CoCoKernelTypeInitialValues.nestml
/**
 *
 *  CoCoKernelCorrectlyTyped.nestml
 *
 *  This file is part of NEST.
 *
 *  Copyright (C) 2004 The NEST Initiative
 *
 *  NEST is free software: you can redistribute it and/or modify
 *  it under the terms of the GNU General Public License as published by
 *  the Free Software Foundation, either version 2 of the License, or
 *  (at your option) any later version.
 *
 *  NEST is distributed in the hope that it will be useful,
 *  but WITHOUT ANY WARRANTY; without even the implied warranty of
 *  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 *  GNU General Public License for more details.
 *
 *  You should have received a copy of the GNU General Public License
 *  along with NEST.  If not, see <http://www.gnu.org/licenses/>.
 *
 *
 * This model is used to test if broken CoCos are identified correctly.
 *
 * Here, the kernel is defined with an incorrect type.
 *
 * Negative case
*/

neuron CoCoKernelCorrectlyTyped:
    parameters:
        tau ms = 10 ms
    end

    initial_values: # variable is now defined in the initial block, thus everything is correct.
        g real = 1
        g' real = 1
    end

    equations:
        kernel g'' = (-1/tau**2 * g - 2/tau * g') * pA  # wrong type
    end
end
